# CMidi

./: Bell.h  CMakeLists.txt  README.md  cmidi.c  cmidi.h  cmidi_sdlext.h  cmidiperc.h  cmidiperc.pch  cmidiprograms.c  cmidiprograms.h  csdlctx.c  csdlctx.h  demo.c  main.c  pchgen.c
midi/: clouds.mid  sfx.mid
pchdir/: cmidiperc.pch
